--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
+# Matlab autosave files
+*.m~
+*.asv
+
+# Emacs autosave files
+*.~
+
+# Jupyter notebooks
+**/.ipynb_checkpoints/
+
+# Mac folder configuration, etc
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Files that might appear on external disk, Mac
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share, Mac
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+
+#--- Remainder is GitHub template for python
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
